# PyMemoPad

./: .gitignore  PyMemoPad.icns  README.md  pyproject.toml
asset/: memodata.json
src/: event.py  jsonserde.py  keys.py  main.py  popup.py  style.py
src/event/: addition.py  const.py  main.py
src/style/: addition.py  const.py  main.py
