[tool.poetry]
name = "simplememo"
version = "0.1.0"
description = ""
authors = ["Glasses-Neo <meganeo.programmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pysimplegui = "^4.35.0"
jsons = "^1.4.0"
dataclass_factory = "^2.10.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
py2app = "^0.23"
flake8-bugbear = "^21.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
