[tool.poetry]
authors = ["Glasses-Neo <meganeo.programmer@gmail.com>"]
description = ""
name = "PyMemoPad"
version = "0.1.0"

[tool.poetry.dependencies]
dataclass_factory = "^2.10.1"
jsons = "^1.4.0"
pysimplegui = "^4.35.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bugbear = "^21.3.2"
py2app = "^0.23"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
